--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ canvas#backgroundCanvas {
     height: 100%;
 }
 
+:root {
+    --corVermelhaTxt: #FB0F0F;
+    --corBrancaTxt: #fff;
+}
+
 /*  Fim  da bolha vermelha */
 
 
@@ -30,30 +35,13 @@ canvas#backgroundCanvas {
 .header {
     height: 90px;
     width: 80%;
-    background-color: rba(255, 255, 255, 0.118);
     z-index: 1;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
     font-family: 'orbitron';
-    margin: 36px auto 0; /* Centraliza horizontalmente */
-    border-radius: 15px;
-    display: flex;
-    justify-content: space-between; /* Distribui os elementos de forma igual */
-    align-items: center;
-    padding: 0 20px; /* Espaço interno */
-    width: 1200px;
     background-color: rgba(60, 60, 60, 0.5);
-    z-index: 1000; /* Garante que o header fique sobre outros elementos */
-    font-family: 'Orbitron', sans-serif;
-    margin: 0 auto;
-    /* Centraliza horizontalmente */
-    border-radius: 15px;
-    align-items: center;
-    display: flex;
     position: fixed; /* Fixa o header no topo da página */
-    top: 0; /* Alinha o header no topo */
-    left: 50%; /* Centraliza horizontalmente */
-    transform: translateX(-50%); /* Ajusta para a centralização correta */
-    padding: 0 20px; /* Adiciona espaçamento interno, se necessário */
-    margin-top: 36px;
     backdrop-filter: blur(15px); /* Aplica o efeito de blur */
 }
 
@@ -76,7 +64,6 @@ canvas#backgroundCanvas {
     justify-content: space-around; /* Centraliza os links */
      /* Ajusta para ocupar mais espaço */
 }
-
 .nav-links a {
     color: white;
     text-decoration: none;
@@ -85,7 +72,6 @@ canvas#backgroundCanvas {
     position: relative;
     transition: ease-in-out 0.2s;
 }
-
 .nav-links a::after {
     content: '';
     position: absolute;
@@ -101,39 +87,6 @@ canvas#backgroundCanvas {
     width: 100%;
 }
 
-.nav-links a:hover {
-    color: #fff;
-}
-
-.btnShare {
-    flex: 1; /* Ocupa um espaço proporcional */
-    display: flex;
-    justify-content: center; /* Alinha à direita */
-}
-
-.share-button {
-    display: flex;
-    align-items: center;
-    background-color: transparent;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 3px solid #FB0F0F;
-    transition: 0.1s ease-in-out;
-}
-
-.share-button:hover {
-    background-color: #FB0F0F;
-}
-
-.partilhar {
-    height: 20px;
-    width: auto;
-    margin-right: 13px;
-}
 
 /*  O ULTIMO PROJETO   */
 
