--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ canvas#backgroundCanvas {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -10; 
+    z-index: -1; 
     pointer-events: none; /* Impede que o canvas bloqueie interações */
 }
 
@@ -34,12 +34,16 @@ canvas#backgroundCanvas {
 .marginPagina {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     width: 80%;
     margin: 0% 10%;
+    z-index: 1;
 }
 
 /*  Header   */
 .header {
+    width: 80%;
+    margin: 0% 10%;
     height: 90px;
     z-index: 1;
     border-radius: 15px;
@@ -55,19 +59,24 @@ canvas#backgroundCanvas {
 .icon {
     width: 24px;
 }
-#txtShare {
+.txtBtn {
     margin-left: 10px;
 }
 
-.btnShare {
+.btn {
     display: flex;
     background: none;
-    border: var(--corVermelhaTxt) 3px solid;
+    border: var(--corBrancaTxt) 3px solid;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
     padding: 0px 1%;
 }
+.btnShare {
+    border-color: var(--corVermelhaTxt);
+}
+
+
 .btnShare, .tituloHeader {
     margin: 0px 30px;
 }
@@ -103,6 +112,14 @@ canvas#backgroundCanvas {
 
 /*  O ULTIMO PROJETO   */
 
+.landingTitle {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    height: 100vh;
+}
+
 .principal {
     color: white;
     font-family: 'orbitron';
@@ -110,8 +127,48 @@ canvas#backgroundCanvas {
     margin: 0;
     margin-top: 80px;
 }
+.subtitulo{
+    z-index: 1;
+    font-size: 1.3rem;
+    color: white;
+    font-family: 'poppins';
+}
+
+#location {
+    display: flex;
+    flex-direction: row;
+}
+
+#locationInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    border: 2px solid var(--corVermelhaTxt);
+    padding: 3em;
 
 
+    height: 500px;
+}
+
+#locationMap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--corVermelhaTxt);
+    padding: 2em;
+    width: 100%;
+}
+
+#map {
+    display: flex;
+    border: 2px solid var(--corVermelhaTxt);
+
+    width: 100%;
+    height: 100%;
+}
 
 /* gradiente titulos */
 .word {
@@ -135,13 +192,6 @@ canvas#backgroundCanvas {
     to {
         background-position: -200% center;
     }
-}
-
-.subtitulo{
-    z-index: 1;
-    font-size: 1.3rem;
-    color: white;
-    font-family: 'poppins';
 }
 
 /* Estilos da barra de rolagem (scrollbar) */
