--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ section {
     margin-bottom: 20%;
 }
 
+
 canvas#backgroundCanvas {
     position: fixed;
     top: 0;
@@ -32,6 +33,7 @@ canvas#backgroundCanvas {
     --corBrancaTxt: #fff;
     --corVermelhaEscura: #990000;
     --corBgCards: #1d1d1d;
+    --corBgCardsLighter: #303030;
 }
 
 .titleSection {
@@ -321,6 +323,53 @@ canvas#backgroundCanvas {
     flex-direction: row;
 }
 
+/* ------------------------------ professores ---------------------------------------- */
+.professoresContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+   
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.professor {
+    display: flex;
+    background-color: var(--corBgCards);
+    width: 30%;
+    margin: 1%;
+    position: relative;
+    justify-content: center;
+}
+.infoBox-professor {
+    display: flex;
+    position: absolute;
+    background-color: var(--corBgCardsLighter);
+    width: 75%;
+    bottom: -10%;
+    padding: 10% 0;
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
+}
+.infos-professor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.socialsProfessor {
+    display: flex;
+    width: 70%;
+    background-color: var(--corVermelhaEscura);
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-top: 5%;
+}
+.imgProfessor {
+    width: 100%;
+}
 
 
 /*----------------------------- localização ----------------------------- */
